[fix] - temporal fix for horizontal scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,10 @@
 		display: flex;
 		flex-direction: column;
 		min-height: 100vh;
+	}
 
+	body{
+		overflow-x: hidden !important;
 	}
 }
 
